fix: table overflow

--- a/components/table.scss
+++ b/components/table.scss
@@ -1,7 +1,8 @@
 .hdd-table {
   $b: #{&};
-  width: 100%;
 
+  display: block;
+  width: 100%;
   overflow: scroll;
   border-spacing: 0;
   border-collapse: collapse;
